auth-service-cache-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-cache
spec:
  selector:
    matchLabels:
      app: cbt
      department: authservicecache
  replicas: 1
  template:
    metadata:
      labels:
        app: cbt
        department: authservicecache
    spec:
      containers:
        - name: auth-service-cache
          image: "indiagator/authservicecache:sep23prod3"
