gateway-server-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server
spec:
  selector:
    matchLabels:
      app: cbt
      department: gateway
  replicas: 1
  template:
    metadata:
      labels:
        app: cbt
        department: gateway
    spec:
      containers:
        - name: gateway-server
          image: "indiagator/gatewayserver:swarm1"
