redis-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: cbt
      department: cache
  replicas: 1
  template:
    metadata:
      labels:
        app: cbt
        department: cache
    spec:
      containers:
        - name: redis
          image: "redis:latest"
