zipkin-server-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin-server
spec:
  selector:
    matchLabels:
      app: cbt
      department: tracing
  replicas: 1
  template:
    metadata:
      labels:
        app: cbt
        department: tracing
    spec:
      containers:
        - name: zipkin-server
          image: "openzipkin/zipkin:latest"
