eureka-server-service-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  type: NodePort
  selector:
    app: cbt
    department: servicediscovery
  ports:
    - protocol: TCP
      port: 8761
      targetPort: 8761
