gateway-server-service-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
spec:
  type: LoadBalancer
  selector:
    app: cbt
    department: gateway
  ports:
    - protocol: TCP
      port: 8072
      targetPort: 8072
