redis-service-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  type: NodePort
  selector:
    app: cbt
    department: cache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
