zipkin-server-service-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: zipkin-server
spec:
  type: NodePort
  selector:
    app: cbt
    department: tracing
  ports:
    - protocol: TCP
      port: 9411
      targetPort: 9411
